visiba-care/vc-embassy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vc-embassy
  namespace: vc-embassy-example-ns
spec:
  selector:
    matchLabels:
      app: vc-embassy
  template:
    metadata:
      labels:
        app: vc-embassy
    spec:
      containers:
        - name: vc-embassy
          image: visiba.azurecr.io/visiba-care/embassy:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              subPath: instance.json
              mountPath: /app/Configurations/instance.json
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: config-volume
          secret:
            secretName: embassy-instance-config
