visiba-care/vc-embassy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vc-embassy
spec:
  selector:
    app: vc-embassy
  ports:
  - port: 80
    targetPort: 80
