visiba-care/vc-embassy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: embassy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: embassy.exampledomain.topdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vc-embassy
            port:
              number: 80
